fixed project list item spacing

--- a/frontendportfoliovite/src/Styles/index.css
+++ b/frontendportfoliovite/src/Styles/index.css
@@ -16,6 +16,7 @@
 body {
   margin: 0;
   min-width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
   background-color: white;
 }
